--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
 <body>
     <header>    
         <nav>
+                <a href="#">WebStudio</a>
             <ul>
-                <li>
-                    <a href="#">WebStudio</a>
-                </li>
                 <li>
                     <a href="#">Studio</a>
                 </li>
@@ -24,6 +22,7 @@
                 </li>
             </ul>
         </nav>
+        <address>
         <ul>
             <li>
                 <a href="mailto:info@devstudio.com">info@devstudio.com</a>
@@ -32,6 +31,7 @@
                 <a href="tel:tel:+110001111111">+11 (000) 111-11-11</a>
             </li>
         </ul>
+        </address>
     </header>
     <main>
         <section>
@@ -108,14 +108,8 @@
         </section>
     </main>
     <footer>
-            <ul>
-                <li>
-                    <a href="#">WebStudio</a>
-                </li>
-                <li>
-                    <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
-                </li>
-            </ul>
+            <a href="#">WebStudio</a>
+            <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
 </body>
 </html>
